fix: repair layout of rules page on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,6 @@ main.flex-shrink-0 {
         margin-left: auto;
         margin-right: auto;
         padding-top: 1em;
-        height: 19vh;
     }
 
     .fs-1 {
